Final adjustments aded, only read me file needs to be completed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
                 <button class="number">0</button>
                 <button class="equals">=</button>
                 <button class="operator">+</button>
-            </div>  
+            </div> 
+            <div class="flex mb-1">
+                <button class="delete">Delete</button>
+            </div>   
           </div>
         </div>
     </main>
