updated readme and final touches to CSS

--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <title>Calc Ya Later!</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script
+    src="https://kit.fontawesome.com/4c536a6bd5.js"
+    crossorigin="anonymous"
+  ></script>
 </head>
 <body>
     <main>
         <div class="calc-body">
-            <div class="p-10">
+            <div class="p-12">
                 <div class="flex mb-1 justify-end">
                     <div class="display">
                         <div class="previousNumber"></div>
@@ -48,6 +52,18 @@
           </div>
         </div>
     </main>
+    <footer class="footer">
+        <p>
+          Copyright ©
+          <script>
+            document.write(new Date().getFullYear())
+            </script>
+          Divyang Kotian
+        </p>
+        <a href="https://github.com/DivyangKotian" target="_blank">
+          <i class="fab fa-github"></i
+            ></a>
+          </footer>
 </body>
 <script src="main.js"></script>
 <script src="addstyles.js"></script>
